k8s/uat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pingtome-uat
  labels:
    env: uat
    app: pingtome
